<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">QrMarket - eShop beta 1.0</string>
    <string name="app_name">Jaimoto 1st</string>
    <string name="dia">Hoy</string>
    <style name="CodeFont">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#0000FF</item>
        <item name="android:typeface">sans</item>
        <item name="android:textStyle">bold</item>
        <item name="android:textSize">15sp</item>
    </style>
    <style name="ProductFont">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:gravity">center_horizontal</item>
        <item name="android:textColor">#0000FF</item>
        <item name="android:typeface">sans</item>
        <item name="android:textStyle">normal</item>
        <item name="android:textSize">14sp</item>
    </style>
    <color name="azul">#d6ffec</color>
    <color name="black">#000000</color>
    <color name="azul_2">#99AAFF</color>
    <color name="gris_1">#999999</color>
    <string name="product">Producto</string>
	<string name="price_u">Prc Unit.</string>
	<string name="qty">Cantidad</string>
	<string name="price_t">Prc Total</string>
	<string name="total">Total</string>
	<string name="add_cart">Agregar al Carro</string>
	<string name="view_cart">Ver el Carro -></string>
	
	<string name="result_succeeded">Exito!</string>
	<string name="result_failed">Fallo!</string>
	<string name="result_failed_why">No se</string>
	
	
	<string name="back_es">Volver</string>
	<string name="back_en">Back</string>
	<string name="check_es">Comprar</string>
	<string name="check_en">Check Out</string>
	
	<string name="del_en">Delete</string>
	<string name="del_es">Eliminar</string>
	
	
	<string name="help">Ayuda</string>
	<string name="scan">Leer Codigo</string>
	<string name="scan_en">Scan Code</string>
	<string name="credits_title">QRScan Code - Ayuda</string>
	<string name="credits_desc">QRScan Code es la app que te permite realizar la compra virtual de tus productos y despues llegaran a tu casa a domicilio, ahorrandote tiempo y hasta más! </string>
	<string name="view_s">View Spots</string>
	<string name="report_e">Report Event</string>
	<string name="events_l">Events Log</string>
</resources>
